--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Github Repo.</title>
 </head>
 <body>
-    
+    <h3>This is my first repository</h3>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae perferendis maxime veniam voluptate corrupti eius dolor, praesentium dolorum voluptates repellendus asperiores exercitationem ipsum eveniet quas cum ex fugiat officia adipisci?</p>
 </body>
 </html>
