--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae perferendis maxime veniam voluptate corrupti eius dolor, praesentium dolorum voluptates repellendus asperiores exercitationem ipsum eveniet quas cum ex fugiat officia adipisci?</p>
     <img src="profile-1.jpg" alt="profile-1">
     <img src="profile-2.jpg" alt="profile-2">
+    <p>Lorem ipsum dolor sit amet.</p>
+    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugit quam molestias.</h1>
 </body>
 </html>
