--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <img src="profile-1.jpg" alt="profile-1">
     <img src="profile-2.jpg" alt="profile-2">
     <p>Lorem ipsum dolor sit amet.</p>
+    <h2>Lorem ipsum dolor sit.</h2>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo fugit quam molestias.</h1>
 </body>
 </html>
