--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae perferendis maxime veniam voluptate corrupti eius dolor, praesentium dolorum voluptates repellendus asperiores exercitationem ipsum eveniet quas cum ex fugiat officia adipisci?</p>
     <h1>Mohammad Salah, The Egyptian King</h1>
     <img src="mo-salah.jpg" alt="">
+    <h2>He is one of the best winger in the world</h2>
     <img src="profile-1.jpg" alt="profile-1">
     <img src="profile-2.jpg" alt="profile-2">
     <p>Lorem ipsum dolor sit amet.</p>
